objects/ADR_Proveedor__c/ADR_Proveedor__c.object-meta.xml
<CustomObject>
    <label>Proveedor</label>
    <nameField>
        <label>Proveedor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proveedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>