objects/ADR_Proveedor__c/fields/ADR_Fecha_Entrega__c.field-meta.xml
<CustomField>
    <fullName>ADR_Fecha_Entrega__c</fullName>
    <label>Fecha Entrega</label>
    <type>Date</type>
</CustomField>