objects/ADR_Proveedor__c/fields/ADR_Localizacion__c.field-meta.xml
<CustomField>
    <fullName>ADR_Localizacion__c</fullName>
    <label>Localizacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Centro</fullName>
            </value>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>