objects/ADR_Proveedor__c/fields/ADR_Producto__c.field-meta.xml
<CustomField>
    <fullName>ADR_Producto__c</fullName>
    <label>Producto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>