objects/ADR_Proveedor__c/fields/ADR_Tienda__c.field-meta.xml
<CustomField>
    <fullName>ADR_Tienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tienda</label>
    <referenceTo>ADR_Tienda__c</referenceTo>
    <relationshipLabel>Proveedores</relationshipLabel>
    <relationshipName>Proveedores</relationshipName>
    <type>Lookup</type>
</CustomField>